  - changed link on nodes list in network info to node info instead of
    customerinfo (alec)
  - don't compress network when changing network address, user must 
    do commpression by himself (alec)
  - standardised sorting of transfer forms and invoices printouts (alec) 
  - BTS#0000481: fixed translation on transfer forms (alec)
  - invoices list display speed optimized (alec)

version 1.7.6 Grannus (2005-11-10):

  - disposable liabilities (alec)
  - introduction to UI modularity (lukasz)
  - use HTTP_X_FORWARDED_FOR, HTTP_CLIENT_IP, REMOTE_ADDR to retrive 
    user IP address (Jerzy Kolosowski)
  - added Finance -> Printing -> Transfer forms (alec)
  - fixed problem with access rights to transferforms modules (alec)
  - added iconv conversion on transferforms (alec)
  - assigning customer to ticket in ticket edition (alec)
  - little layout fix for userbalance (lukasz)

version 1.7.5 Shaq-ran <broken version> (2005-11-05):

  - BTS#0000466: lms-antyvir: fixed parse error (alec)
  - BTS#0000373: lms-notify: added exception handler for mail server 
    connection problems (alec)
  - changed stats units to kbps (alec)
  - added traffic stats in node informations window (alec)
  - fixed/changed access rights for printing modules (alec)

version 1.7.4 Wraith (2005-10-31):

  - BTS#0000451: lms-rtparser uses also CC: header to get queue ID (alec)
  - BTS#0000455: documentation fixed options names 
    usergroups -> customergroups (alec)
  - lmsd/dhcp: fixed problem with hosts with public IP (alec)
  - lmsd/parser: updated tscript library - added "break" and "continue"
    instructions in "for" and "while" loops (alec)
  - added "type" in cash table to handle some operation types 
    (cash, non-cash) - it fixes network balance calculations for
    backward compatybility and lost in 2005092900 database upgrade 
    additional functionality (alec)
  - contrib/sqlpanel: design fixes (alec)
  - forms can be submitted by Enter (lukas)