@@ -21,6 +21,7 @@ version ? (????-??-??):
   - standardised sorting of transfer forms and invoices printouts (alec) 
   - BTS#0000481: fixed translation on transfer forms (alec)
   - invoices list display speed optimized (alec)
+  - example invoices/cash records generation in genfake module (alec)
 
 version 1.7.6 Grannus (2005-11-10):
 
